fixed project link text-align

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ a {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 24px;
+  text-align: center;
   margin: 0px 0px 50px 0px;
   transition-duration: 0.25s;
 }
